updated comments in example config

--- a/example_npr.conf
+++ b/example_npr.conf
@@ -6,11 +6,13 @@ LOCATOR=IO91UN
 ASL=65
 # Now define your ports
 # You must use the names in /etc/ax25/axport
+# The names must be exactly the same case
 # For each port, set variables 
 # FREQ_{port} - The frequency the port runs at (integer in Hz)
 # MODE_{port} - Mode of this port (eg. AX.25, IL2P)
 # BAUD_{port} - The communication speed (eg. 300, 1200, 9600)
 # TYPE_{port} - Port type (eg. RF, Internet)
+# MOD_{port} - Modulation for the port (eg. AFSK)
 # Port Named UHF in /etc/ax25/axport
 FREQ_UHF=432675000
 MODE_UHF=AX.25
